.tmp/GATES-006/red-parser.txt
   Compiling but v0.0.0 (/Users/justinrich/Projects/gitbutler/.kb-run-sprint/worktrees/GATES-006/crates/but)
error[E0432]: unresolved import `crate::args::forge::pr::MergeMethod`
   --> crates/but/src/args/tests.rs:802:21
    |
802 |         forge::pr::{MergeMethod, Platform as PrPlatform, Subcommands as PrCommand},
    |                     ^^^^^^^^^^^ no `MergeMethod` in `args::forge::pr`

error[E0599]: no variant named `Merge` found for enum `args::forge::pr::Subcommands`
   --> crates/but/src/args/tests.rs:859:37
    |
859 |                     Some(PrCommand::Merge {
    |                                     ^^^^^ variant not found in `args::forge::pr::Subcommands`
    |
   ::: crates/but/src/args/forge.rs:11:5
    |
 11 |     pub enum Subcommands {
    |     -------------------- variant `Merge` not found here

Some errors have detailed explanations: E0432, E0599.
For more information about an error, try `rustc --explain E0432`.
error: could not compile `but` (lib test) due to 2 previous errors
warning: build failed, waiting for other jobs to finish...
